--- a/src/main/resources/web/ylt/index.html
+++ b/src/main/resources/web/ylt/index.html
@@ -116,12 +116,11 @@
 
 		</div>
 
-        <div id="yesLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
+        <div id="yesLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3" style="margin-top: 5px !important;">
+					<img id="vipMark" th:src="@{/img/vip.png}" style="width: 45px;height: 38px">
             <div class="btn-group">
-                <i class="vip-icon"></i>
                 <button id="nameSpan" style="color:#fff" type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <!--<i id="ordinaryCard" class="fa fa-user"></i><i id="goldCard" class="fa fa-get-pocket"></i>-->
-                    <i id="ordinaryCard" class="base-icon ordinary-card"></i><i id="goldCard" class="base-icon gold-card"></i>
+                    <i class="fa fa-user"></i>
                 </button>
                 <div class="dropdown-menu">
                     <a href="#" class="dropdown-item" data-toggle="modal" aria-pressed="false" data-target="#changePass">
@@ -162,10 +161,10 @@
 						<a class="nav-link" th:href="@{/order/order}">我的订单</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" th:href="@{/order/order}">帮助信息</a>
+						<a class="nav-link" th:href="@{/route/helpInfo}">帮助信息</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" th:href="@{/order/order}">关于我们</a>
+						<a class="nav-link" th:href="@{/route/aboutUs}">关于我们</a>
 					</li>
 				</ul>
 
@@ -669,7 +668,7 @@
 			toastr.warning("请先登录");
 			return;
 		}
-		if(isVip === "1" && account.isVip !== "1"){
+      if(isVip === "1" && account.isVip !== "1"){
             toastr.warning("此优惠只限于VIP用户");
             return;
 		}
@@ -1045,11 +1044,8 @@
             $("#accountId").val(account.id);
             if(account.isVip === "1"){
                 $("#vipButton").hide();
-                $("#ordinaryCard").hide();
-                $("#goldCard").show();
             }else{
-                $("#ordinaryCard").show();
-                $("#goldCard").hide();
+                $("#vipMark").hide();
             }
         }else{
             $("#noLogin").show();
@@ -1092,7 +1088,7 @@
 												'<span style="font-size: 16px"><i class="far fa-id-card"></i>'+ item.vehicle.exhaust+'厢|'+item.vehicle.type+'|'+item.vehicle.cubicles+'|乘坐'+item.vehicle.seatNum+'人</span>' +
 											'</div>' +
               				'<div style="position: absolute"><h2><span style="color:#fabe00">￥'+ rent+'</span></h2><h4><span>/日均</span></h4></div>'+
-              				'<button onclick="lease(\''+item.vehicle.id+'\',\''+imgSrc+'\',\''+rent+'\')" type="button" class="btn btn-warning lease-button" ><span style="color:#fff;font-weight:700">立即预定</span></button>'+
+              				'<button onclick="lease(\''+item.vehicle.id+'\',\''+imgSrc+'\',\''+rent+'\',\''+item.isVip+'\')" type="button" class="btn btn-warning lease-button" ><span style="color:#fff;font-weight:700">立即预定</span></button>'+
 										'</div>'+
 									'</div>'+
 								'</div>'+
