--- a/src/main/resources/web/ylt/services.html
+++ b/src/main/resources/web/ylt/services.html
@@ -62,7 +62,7 @@
 
 		</div>
 
-		<div id="yesLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3">
+		<div id="yesLogin" class="col-md-4 top-forms mt-md-3 mt-2 mb-md-0 mb-3" style="margin-top: 5px !important;">
 			<a id="nameSpan" href="#"><i class="fas fa-user"></i> </a>
 			<a href="#" data-toggle="modal" aria-pressed="false" data-target="#changePass">
 				<i class="fas fa-lock"></i> 修改密码</a>
@@ -109,7 +109,7 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="contact.html">Contact</a>
+							<a class="nav-link" href="help.html">Contact</a>
 						</li>
 					</ul>
 
