--- a/src/main/resources/web/ylt/index.html
+++ b/src/main/resources/web/ylt/index.html
@@ -18,21 +18,16 @@
 
 	<link rel="stylesheet" th:href="@{/css/owl.carousel.css}" type="text/css" media="all">
 	<link rel="stylesheet" th:href="@{/css/owl.theme.css}" type="text/css" media="all">
-	<!-- css files -->
 	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"> <!-- Bootstrap-Core-CSS -->
 	<link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" media="all" /> <!-- Style-CSS -->
 	<link rel="stylesheet" th:href="@{/css/fontawesome-all.css}"> <!-- Font-Awesome-Icons-CSS -->
-	<!-- //css files -->
 	<link th:href="@{/layui/css/layui.css}" rel="stylesheet"/>
 	<link th:href="@{/css/ladda-theme.css}" rel="stylesheet"/>
 	<link th:href="@{/css/main.css}" rel="stylesheet"/>
 	<link th:href="@{/css/bootstrap-datetimepicker.min.css}" rel="stylesheet"/>
-	<!-- web-fonts -->
-	<link
-			href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext"
-			rel="stylesheet">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
-	<!-- //web-fonts -->
+	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext" rel="stylesheet">
+	<link th:href="@{/css/toastr.min.css}" rel="stylesheet"/>
+
 	<script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
 	<script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
@@ -161,10 +156,10 @@
 						<a class="nav-link" th:href="@{/order/order}">我的订单</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" th:href="@{/route/helpInfo}">帮助信息</a>
+						<a class="nav-link" th:href="@{/route/helpInfo}">帮助查询</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" th:href="@{/route/aboutUs}">关于我们</a>
+						<a class="nav-link" th:href="@{/route/feedback}">信息反馈</a>
 					</li>
 				</ul>
 
