--- a/src/main/resources/web/ylt/order.html
+++ b/src/main/resources/web/ylt/order.html
@@ -192,10 +192,10 @@
                         <a class="nav-link" th:href="@{/order/order}">我的订单</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/order/order}">帮助信息</a>
+                        <a class="nav-link" th:href="@{/route/helpInfo}">帮助查询</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/order/order}">关于我们</a>
+                        <a class="nav-link" th:href="@{/route/feedback}">信息反馈</a>
                     </li>
                 </ul>
 
