--- a/src/main/resources/web/ylt/services.html
+++ b/src/main/resources/web/ylt/services.html
@@ -89,7 +89,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="about.html">About</a>
+							<a class="nav-link" href="feedback.html">About</a>
 						</li>
 						<li class="nav-item active">
 							<a class="nav-link" href="services.html">Services</a>
@@ -103,7 +103,7 @@
 								Dropdown
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item text-center" href="about.html">About</a>
+								<a class="dropdown-item text-center" href="feedback.html">About</a>
 								<a class="dropdown-item text-center" href="services.html">Services</a>
 
 							</div>
