--- a/src/main/resources/web/ylt/feedback.html
+++ b/src/main/resources/web/ylt/feedback.html
@@ -166,15 +166,15 @@
 
 <section class="contact py-5">
     <div class="container py-lg-5">
-        <h1 class="heading text-capitalize text-center">Contact Us</h1>
-        <h5 class="heading mb-5 text-center">Taxi Cab</h5>
+        <h1 class="heading text-capitalize text-center">联系我们</h1>
+        <h5 class="heading mb-5 text-center">聆听心声</h5>
         <div class="row agile-contact-form">
             <div class="col-md-6 contact-form-left map">
                 <div class="w3layouts-contact-form-top">
                     <div class="contact-form-top">
                         <h3>Locate Us</h3>
                     </div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3381268.89304075!2d-108.26956901768942!3d34.145820117962906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b0d03d337cc6ad9%3A0x9968b72aa2438fa5!2sCanada!5e0!3m2!1sen!2sin!4v1524478277945" allowfullscreen></iframe>
+                    <img th:src="@{/images/team2.jpg}" alt="" class="img-fluid">
                 </div>
 
             </div>
@@ -188,7 +188,7 @@
                         <input type="text" name="Subject" placeholder="Subject" required="">
                         <input type="email" name="Email" placeholder="Email" required="">
                         <textarea name="Message" placeholder="Message" required=""></textarea>
-                        <button class="btn1">Submit</button>
+                        <button class="btn1">提交</button>
                     </form>
                 </div>
             </div>
@@ -200,8 +200,8 @@
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <div class="col-lg-9 col-sm-10 address-right text-left">
-                        <h6>Address</h6>
-                        <p> 3481 Jack Street Beverly Jack Hills<span> 90210 Block, USA </span>
+                        <h6>地址</h6>
+                        <p> 海淀区亿路通大街001号<span> 北京, 中国 </span>
                         </p>
                     </div>
                 </div>
@@ -212,9 +212,9 @@
                         <i class="fas fa-envelope-open"></i>
                     </div>
                     <div class="col-lg-9 col-sm-10 address-right text-left">
-                        <h6>Email</h6>
+                        <h6>邮箱</h6>
                         <p>Email :
-                            <a href="mailto:example@email.com"> mail@example.com</a>
+                            <a href=#> ylt@mail.com</a>
                         </p>
                     </div>
                 </div>
@@ -225,9 +225,9 @@
                         <i class="fas fa-phone"></i>
                     </div>
                     <div class="col-lg-9 col-sm-10 address-right text-left">
-                        <h6>Phone</h6>
-                        <p>Phone : 112 367 896 2449</p>
-                        <p>Fax : 112 367 896 2449</p>
+                        <h6>电话</h6>
+                        <p>座机 : 112 367 896 2449</p>
+                        <p>传真 : 112 367 896 2449</p>
                         </p>
                     </div>
                 </div>
