--- a/src/main/resources/web/ylt/feedback.html
+++ b/src/main/resources/web/ylt/feedback.html
@@ -172,22 +172,22 @@
             <div class="col-md-6 contact-form-left map">
                 <div class="w3layouts-contact-form-top">
                     <div class="contact-form-top">
-                        <h3>Locate Us</h3>
+                        <h3>为您服务</h3>
                     </div>
-                    <img th:src="@{/images/team2.jpg}" alt="" class="img-fluid">
+                    <img th:src="@{/images/contact.jpg}" alt="" class="img-fluid">
                 </div>
             </div>
             <div class="col-md-6 mt-md-0 mt-4 contact-form-right">
                 <div class="contact-form-top">
-                    <h3>Send us a message</h3>
+                    <h3>意见反馈</h3>
                 </div>
                 <div class="agileinfo-contact-form-grid">
-                    <form action="#" method="post">
-                        <input type="text" name="Name" placeholder="Name" required="">
-                        <input type="text" name="Subject" placeholder="Subject" required="">
-                        <input type="email" name="Email" placeholder="Email" required="">
-                        <textarea name="Message" placeholder="Message" required=""></textarea>
-                        <button class="btn1">提交</button>
+                    <form id="feedbackForm" action="#" method="post">
+                        <input type="text" name="name" placeholder="称呼" required="">
+                        <input type="text" name="phone" placeholder="电话" required="">
+                        <input type="email" name="email" placeholder="邮箱" required="">
+                        <textarea name="message" placeholder="意见建议" required=""></textarea>
+                        <button onclick="submit()" class="btn1">提交</button>
                     </form>
                 </div>
             </div>
@@ -772,7 +772,74 @@
             $("#noLogin").show();
             $("#yesLogin").hide();
         }
+        $('#feedbackForm').bootstrapValidator({
+            message: 'This value is not valid',
+            feedbackIcons: {
+                valid: 'glyphicon glyphicon-ok',
+                invalid: 'glyphicon glyphicon-remove',
+                validating: 'glyphicon glyphicon-refresh'
+            },
+            fields: {
+                name: {
+                    message: '姓名验证失败',
+                    validators: {
+                        notEmpty: {
+                            message: '姓名不能为空'
+                        },
+                        stringLength: {
+                            min: 4,
+                            max: 8,
+                            message: '姓名长度必须在4到8位之间'
+                        }
+                    }
+                },
+                phone: {
+                    message: '手机号验证失败',
+                    validators: {
+                        notEmpty: {
+                            message: '手机号不能为空'
+                        },
+                        regexp: {
+                            regexp: /^((13[0-9])|(14[5|7])|(15([0-3]|[5-9]))|(18[0,5-9]))\d{8}$/,
+                            message: '手机号格式错误'
+                        }
+                    }
+                },
+                email: {
+                    validators: {
+                        notEmpty: {
+                            message: '邮箱地址不能为空'
+                        },
+                        regexp: {
+                            regexp: /^([A-Za-z0-9_\-\.])+\@([A-Za-z0-9_\-\.])+\.([A-Za-z]{2,4})$/,
+                            message: '邮箱格式错误'
+                        }
+                    }
+                }
+            }
+        });
     });
+
+    function submit(){
+        var bootstrapValidator = $("#feedbackForm").data('bootstrapValidator').isValid();
+        if(bootstrapValidator){
+            var data = $("#feedbackForm").serializeObject();
+            $.ajax({
+                url:[[@{/feedback/save}]],
+                data:data,
+                type:"post",
+                dataType:"json",
+                success:function(result){
+                if(result.success){
+                    toastr.success("提交成功");
+                }else{
+                    toastr.error(result.msg);
+                }
+            }
+        });
+        }
+    }
+
     /*]]>*/
 </script>
 </body>
