--- a/src/main/resources/web/inventory/query.html
+++ b/src/main/resources/web/inventory/query.html
@@ -12,6 +12,21 @@
                 <input id="shopName" type="text" placeholder="请输入门店名称" class="layui-input">
             </div>
             <div class="layui-input-inline">
+                <select name="prov" id="prov" lay-filter="prov" >
+                    <option value="">请选择省</option>
+                </select>
+            </div>
+            <div class="layui-input-inline">
+                <select name="city" id="city" lay-filter="city" >
+                    <option value="">请选择市</option>
+                </select>
+            </div>
+            <div class="layui-input-inline">
+                <select name="area" id="area" lay-filter="area" >
+                    <option value="">请选择县/区</option>
+                </select>
+            </div>
+            <div class="layui-input-inline">
                 <button class="layui-btn" lay-event="search">搜索</button>
             </div>
             <div class="layui-input-inline">
@@ -26,7 +41,14 @@
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
     </script>
     <script th:src="@{/js/utils.js}"></script>
+    <script type="text/javascript" th:src="@{/js/data.js}"></script>
+    <script type="text/javascript" th:src="@{/js/province.js}"></script>
     <script type="text/javascript" th:inline="javascript">
+        $(function(){
+            defaults.v1 = [[${obj.prov}]];
+            defaults.v2 = [[${obj.city}]];
+            defaults.v3 = [[${obj.area}]];
+        });
         layui.use('table', function(){
             var table = layui.table;
             var shopTable = table.render({
