--- a/src/main/resources/web/shop/query.html
+++ b/src/main/resources/web/shop/query.html
@@ -81,23 +81,95 @@
             //监听行单击事件（单击事件为：rowDouble）
             table.on('row(shopFilter)', function(obj){
                 var data = obj.data;
-
-                layer.alert(JSON.stringify(data), {
-                    title: '当前行数据：'
-                });
+                console.log(data.id);
 
                 //标注选中样式
                 obj.tr.addClass('layui-table-click').siblings().removeClass('layui-table-click');
+                vehicleTable.reload({
+                    where: {shopId:data.id}
+                });
             });
+
+            table.on('toolbar(shopFilter)', function(obj){
+                switch(obj.event){
+                    case 'add':
+                        layer.open({
+                            id: 'insert-form',
+                            type: 2,
+                            title:"编辑",
+                            area: ['400px', '420px'],
+                            btn: ['确定'],
+                            yes: function(index, layero){
+                                insertSubmit();
+                            },
+                            content: [[@{/shop/edit}]]
+                });
+                break;
+            case 'search':
+                shopTable.reload({
+                    where: { //设定异步数据接口的额外参数，任意设
+                        shopName: $("#shopName").val()
+                    }
+                    ,page: {
+                        curr: 1 //重新从第 1 页开始
+                    }
+                });
+                break;
+            };
+            });
+
+            //监听行工具事件
+            table.on('tool(shopFilter)', function(obj){
+                var data = obj.data;
+                if(obj.event === 'del'){
+                    layer.confirm('真的删除行么', function(index){
+                        var index_ = layer.load(1);
+                        $.ajax({
+                            url:[[@{/shop/del}]],
+                        data:{"id":data.id},
+                        type:"post",
+                            dataType:"json",
+                            success:function(result){
+                            if(result.success){
+                                layer.msg("删除成功");
+                                shopTable.reload();
+                                layer.close(index);
+                            }else{
+                                layer.msg(result.msg);
+                            }
+                            layer.close(index_);
+                        },
+                    });
+                    });
+                } else if(obj.event === 'edit'){
+                    layer.open({
+                        id: 'insert-form',
+                        type: 2,
+                        title:"修改",
+                        area: ['400px', '420px'],
+                        btn: ['确定'],
+                        yes: function(index, layero){
+                            insertSubmit();
+                        },
+                        content: [[@{/shop/edit?id=}]]+data.id
+                });
+                }
+            });
+
+            function insertSubmit(){
+                var frameId=document.getElementById('insert-form').getElementsByTagName("iframe")[0].id;
+                $('#'+frameId)[0].contentWindow.onSubmit();
+            }
 
             var vehicleTable = table.render({
                 elem: '#vehicleTable'
-                ,url:[[@{/vehicle/getVehicleTable}]]
+                ,url:[[@{/inventory/getInventoryTable}]]
                 ,toolbar: '#toolbarVehicle'
                 ,height:'full-104'
                 ,title: '车辆数据表'
                 ,limit: 10
                 ,limits: [10, 15, 20]
+                ,where: {shopId:'#'}
                 ,cols: [
                 [
                     {field:'id', title:'id',width:50 }
@@ -130,7 +202,7 @@
             }
         });
 
-            table.on('toolbar(shopFilter)', function(obj){
+            table.on('toolbar(vehicleFilter)', function(obj){
                 switch(obj.event){
                     case 'add':
                         layer.open({
@@ -143,31 +215,31 @@
                                 insertSubmit();
                             },
                             content: [[@{/shop/edit}]]
-                        });
-                        break;
-                    case 'search':
-                        shopTable.reload({
-                            where: { //设定异步数据接口的额外参数，任意设
-                                shopName: $("#shopName").val()
-                            }
-                            ,page: {
-                                curr: 1 //重新从第 1 页开始
-                            }
-                        });
-                        break;
-                };
+                });
+                break;
+            case 'search':
+                shopTable.reload({
+                    where: { //设定异步数据接口的额外参数，任意设
+                        shopName: $("#shopName").val()
+                    }
+                    ,page: {
+                        curr: 1 //重新从第 1 页开始
+                    }
+                });
+                break;
+            };
             });
 
             //监听行工具事件
-            table.on('tool(shopFilter)', function(obj){
+            table.on('tool(vehicleFilter)', function(obj){
                 var data = obj.data;
                 if(obj.event === 'del'){
                     layer.confirm('真的删除行么', function(index){
                         var index_ = layer.load(1);
                         $.ajax({
                             url:[[@{/shop/del}]],
-                            data:{"id":data.id},
-                            type:"post",
+                        data:{"id":data.id},
+                        type:"post",
                             dataType:"json",
                             success:function(result){
                             if(result.success){
@@ -183,21 +255,21 @@
                     });
                 } else if(obj.event === 'edit'){
                     layer.open({
-                        id: 'insert-form',
+                        id: 'vehicle-form',
                         type: 2,
                         title:"修改",
                         area: ['400px', '420px'],
                         btn: ['确定'],
                         yes: function(index, layero){
-                            insertSubmit();
+                            insertVehicle();
                         },
                         content: [[@{/shop/edit?id=}]]+data.id
-                    });
+                });
                 }
             });
 
-            function insertSubmit(){
-                var frameId=document.getElementById('insert-form').getElementsByTagName("iframe")[0].id;
+            function insertVehicle(){
+                var frameId=document.getElementById('vehicle-form').getElementsByTagName("iframe")[0].id;
                 $('#'+frameId)[0].contentWindow.onSubmit();
             }
         });
